refactor: privatize entity finding methods in services